- Add target icon for make-shift submit button. probably need a better icon - Add feat add, edit & deleting functionality - Fix skill editing.

--- a/htdocs/css/default.css
+++ b/htdocs/css/default.css
@@ -320,3 +320,14 @@ li.noCheck div.listLabel {
 	border                : 1px solid #D8D7C5;
 	boder-top             : 0;
 }
+
+#SkillTable .icon, #FeatTable .icon {
+	cursor                : pointer;
+}
+
+#SkillDiv {
+	float                 : left;
+}
+#FeatDiv {
+	margin-left: 450px;
+}
