--- a/htdocs/css/statBlock.css
+++ b/htdocs/css/statBlock.css
@@ -131,6 +131,3 @@ a.ajaxLink:active {
 #FeatTable {
 	width                 : 315px;
 }
-#FeatTable .icon {
-	cursor                : pointer;
-}
